# android-partition-backup

./: README.md  gui.py  main.py  pyproject.toml  requirements.txt
src/: adb_utils.py  backup.py  device_utils.py  partition_utils.py  selection_utils.py
