[project]
name = "android-partition-backup"
version = "1.0.0"
description = "GUI and CLI tool for backing up Android partitions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Recovery Tools"
]

dependencies = [
    "ttkbootstrap>=1.10.1",
    "Pillow>=10.3.0",
    "adb-shell>=0.4.4",
    "psutil>=5.9.8",
    "colorama>=0.4.6",
    "tqdm>=4.66.2"
]

[project.optional-dependencies]
gui = [
    "pywin32>=306; platform_system=='Windows'",
    "pyobjc>=10.2; platform_system=='Darwin'"
]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.3.0",
    "mypy>=1.9.0"
]
build = [
    "pyinstaller>=6.5.0",
    "twine>=4.0.2"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
